# specformatter

./: .gitignore  CMakeLists.txt  README.md
include/: Entry.hpp  Flag.hpp  Note.hpp  Section.hpp  Spec.hpp  SpecFormatter.hpp
src/: Entry.cpp  Flag.cpp  Note.cpp  Section.cpp  Spec.cpp  SpecFormatter.cpp  main.cpp
